2005-08-25  Sam Steingold  <sds@gnu.org>

	* m4/regex.m4, modules/regexp/regcomp.c, modules/regexp/regex.h:
	* modules/regexp/regex_internal.c, modules/regexp/regex_internal.h:
	* modules/regexp/regexec.c, modules/regexp/regex.c: sync with gnulib
	* modules/regexp/configure.in: add AC_GNU_SOURCE,
	use gl_REGEX instead of gl_INCLUDED_REGEX

2005-08-25  Sam Steingold  <sds@gnu.org>

	* Makefile.devel (src/autoconf/aclocal.m4): prepend AC_GNU_SOURCE
	to configure.ac and strip it from configures
	Suggested by Stepan Kasal <kasal@ucw.cz> in
	http://article.gmane.org/gmane.comp.lib.gnulib.bugs:4165

2005-08-24  Sam Steingold  <sds@gnu.org>

	explicitly close all file descriptors before exec()
	* socket.d (connect_to_x_server): do not set FD_CLOEXEC
	* configure.in: check for sysconf and
	* unixaux.d (close_all_fd): new function
	* unix.d (close_all_fd): declare it
	* stream.d (create_input_pipe, create_output_pipe, create_io_pipe):
	call it before execl()
	* pathname.d (EXECUTE, LAUNCH): call it before execv() and execvp()

2005-08-23  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/calls.c (POSIX::STREAM-OPTIONS): implemented
	* modules/syscalls/posix.lisp (POSIX::STREAM-OPTIONS): export

2005-08-22  Sam Steingold  <sds@gnu.org>

	* utils/modprep.lisp (print-tables-1): *_to_list():
	when c_const is 0, do not put l_const into the list

2005-08-22  Sam Steingold  <sds@gnu.org>

	* makemake.in: issue a warning on --with-module=base-module

2005-08-22  Sam Steingold  <sds@gnu.org>

	* modules/regexp/regcomp.c, modules/regexp/regex.h:
	* modules/regexp/regex_internal.c, modules/regexp/regex_internal.h:
	* modules/regexp/regexec.c, m4/regex.m4: sync with gnulib

2005-08-19  Sam Steingold  <sds@gnu.org>

	* stream.d (stream_lend_handle): propagate up the possible change
	in the first argument coming from check_value()
	* lispbibl.d (stream_lend_handle): updated the declaration
	* pathname.d (init_launch_streamarg):
	updated the call to stream_lend_handle()