@@ -111,14 +111,13 @@ dnl
 dnl DEFS STDC_HEADERS if exist stdlib.h, stdarg.h, ...
 CL_STDC_HEADERS
 dnl DEFS HAVE_SYS_INTTYPES_H -- needed for stdint.h.in
-AC_CHECK_HEADERS(sys/inttypes.h)
+AC_CHECK_HEADERS(sys/inttypes.h unistd.h sys/file.h sys/statvfs.h sys/statfs.h)
 dnl DEFS HAVE_OFFSETOF if offsetof in stddef.h
 CL_OFFSETOF
 dnl DEFS HAVE_STDBOOL_H, sets variables STDBOOL_H, HAVE__BOOL
 gt_STDBOOL_H
 dnl DEFS HAVE_STDINT_H, sets variables STDINT_H, HAVE_LONG_64BIT, HAVE_LONG_LONG_64BIT
 gl_STDINT_H
-AC_CHECK_HEADERS(unistd.h)dnl DEFS HAVE_UNISTD_H if exist <unistd.h>
 dnl DEFS ACCESS_NEEDS_SYS_FILE_H if sys/file.h is needed for the access() flags
 CL_ACCESSFLAGS
 dnl DEFS OPEN_NEEDS_SYS_FILE_H if sys/file.h is needed for the open() flags
@@ -163,7 +162,6 @@ dnl set variable ALLOCA, DEFS NO_ALLOCA
 AC_FUNC_ALLOCA
 dnl DEFS HAVE__JMP, LONGJMP_RETURNS
 CL_SETJMP
-AC_CHECK_FUNCS(memset)
 dnl DEFS RETSIGTYPE, SIGTYPE_DOTS
 CL_TYPE_SIGNAL
 dnl DEFS SIGNALBLOCK_POSIX, SIGNALBLOCK_SYSV, SIGNALBLOCK_BSD
@@ -190,7 +188,8 @@ dnl DEFS RETABORTTYPE, ABORT_VOLATILE
 CL_ABORT
 dnl DEFS HAVE_PERROR_DECL
 CL_PERROR
-AC_CHECK_FUNCS(strerror sysconf getdtablesize)
+AC_CHECK_FUNCS(strerror sysconf getdtablesize memset setsid setpgid dnl
+fsync flock gethostent shutdown usleep ualarm setitimer nice ftime realpath)
 dnl DEFS HAVE_PUTENV, HAVE_SETENV
 CL_PUTENV
 dnl DEFS HAVE_LC_MESSAGES
@@ -199,7 +198,6 @@ dnl DEFS HAVE_GETRLIMIT, HAVE_SETRLIMIT, RLIMIT_RESOURCE_T, SETRLIMIT_CONST
 CL_RLIMIT
 dnl DEFS HAVE_VFORK_H, vfork
 AC_FUNC_VFORK
-AC_CHECK_FUNCS(setsid setpgid)dnl ==> HAVE_SETSID, HAVE_SETPGID
 dnl DEFS PID_T
 CL_WAITPID
 dnl DEFS HAVE_SYS_RESOURCE_H, HAVE_GETRUSAGE, RUSAGE_WHO_T, HAVE_SYS_TIMES_H
@@ -208,6 +206,7 @@ dnl DEFS HAVE_GETCWD, GETCWD_SIZE_T
 CL_GETCWD
 dnl DEFS STAT_MACROS_BROKEN
 AC_HEADER_STAT
+AC_HEADER_TIME
 dnl DEFS HAVE_LSTAT
 CL_LSTAT
 dnl DEFS HAVE_READLINK
@@ -216,10 +215,6 @@ dnl DEFS ELOOP_VALUE
 CL_ELOOP
 dnl DEFS RETCLOSEDIRTYPE, VOID_CLOSEDIR
 CL_CLOSEDIR
-AC_CHECK_FUNCS(fsync flock)dnl ==> HAVE_FSYNC HAVE_FLOCK
-AC_CHECK_HEADERS(sys/file.h)dnl ==> HAVE_SYS_FILE_H
-AC_CHECK_HEADERS(sys/statvfs.h sys/statfs.h)dnl ==> HAVE_SYS_STATVFS_H, HAVE_SYS_STATFS_H
-AC_CHECK_FUNCS(gethostent shutdown)dnl ==> HAVE_GETHOSTENT HAVE_SHUTDOWN
 dnl DEFS HAVE_IOCTL, IOCTL_REQUEST_T, IOCTL_ARGUMENT_T, IOCTL_DOTS
 dnl HAVE_FIONREAD, NEED_SYS_FILIO_H, NEED_SYS_IOCTL_H, HAVE_RELIABLE_FIONREAD
 CL_IOCTL
@@ -227,7 +222,6 @@ dnl DEFS HAVE_POLL, HAVE_RELIABLE_POLL
 CL_POLL
 dnl DEFS HAVE_SELECT, SELECT_WIDTH_T, SELECT_SET_T, SELECT_CONST, HAVE_RELIABLE_SELECT
 CL_SELECT
-AC_CHECK_FUNCS(usleep ualarm setitimer nice ftime realpath)
 dnl DEFS HAVE_GETTIMEOFDAY, GETTIMEOFDAY_DOTS, GETTIMEOFDAY_TZP_T
 CL_GETTIMEOFDAY
 dnl DEFS HAVE_TIMES_CLOCK (only if no ftime())
